--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "postcss.config.js",
   "scripts": {
+    "start": "node src/app.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
@@ -19,23 +20,23 @@
   },
   "homepage": "https://github.com/dylan-berry/five-straight#readme",
   "dependencies": {
-    "axios": "^0.21.1",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.9.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
-    "mongodb": "^3.6.4",
+    "mongodb": "^3.6.5",
     "mongoose": "^5.11.18",
-    "node-fetch": "^2.6.1",
-    "socket.io": "^3.1.2",
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.0",
     "vue": "^3.0.7",
     "vue-router": "^4.0.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.3",
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-plugin-router": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
+    "@tailwindcss/postcss7-compat": "^2.0.4",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-router": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
     "@vue/compiler-sfc": "^3.0.7",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
