--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "json-server": "^0.16.3",
     "mongodb": "^3.6.5",
     "mongoose": "^5.11.18",
+    "node-fetch": "^2.6.1",
     "socket.io": "^4.0.0",
     "socket.io-client": "^4.0.0",
     "vue": "^3.0.7",
