--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/dylan-berry/five-straight#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.9.1",
     "dotenv": "^8.2.0",
@@ -27,7 +28,6 @@
     "json-server": "^0.16.3",
     "mongodb": "^3.6.5",
     "mongoose": "^5.11.18",
-    "node-fetch": "^2.6.1",
     "socket.io": "^4.0.0",
     "socket.io-client": "^4.0.0",
     "vue": "^3.0.7",
