--- a/package.json
+++ b/package.json
@@ -22,25 +22,26 @@
   "dependencies": {
     "axios": "^0.21.1",
     "connect-history-api-fallback": "^1.6.0",
-    "core-js": "^3.10.0",
-    "dotenv": "^8.2.0",
+    "core-js": "^3.13.1",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.12.3",
-    "socket.io": "^4.0.1",
-    "socket.io-client": "^4.0.1",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.12.12",
+    "node-cron": "^3.0.0",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "vue": "^3.0.11",
-    "vue-router": "^4.0.6"
+    "vue-router": "^4.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.1.0",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-router": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
+    "@tailwindcss/postcss7-compat": "^2.1.4",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "@vue/compiler-sfc": "^3.0.11",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4"
   }
 }
